--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
      <main>
-             <h1> this is h1 </h1>
-             <h2> this is h2 </h2>
-
+         <h1 id="title-1">this is h1</h1>
+         <h2 id="title-2">this is h2</h2>
+         <h2 id="title-3">this is h2 again</h2>
+         <h1 class="name"> This is an class </h1>
+         <h1 class="name">this is an class</h1>
      </main>
+
+
+     <script src="index.js"></script>
 </body>
 </html>
